[gd_scene load_steps=6 format=3 uid="uid://cvgqyulbqgdb7"]

[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="1_xi0xo"]
[ext_resource type="Script" path="res://addons/fart_engine/Fart_Custom_Nodes/fart_data_display_input.gd" id="1_ya2ss"]
[ext_resource type="PackedScene" uid="uid://civbxt4nfyill" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_DropdownList.tscn" id="5_icee1"]
[ext_resource type="PackedScene" uid="uid://bhhe1y6ucvenk" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Array.tscn" id="5_lpdec"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/NavigationButtonTemplate.tscn" id="6_uf8l7"]

[node name="fart_data_display_input" type="Control"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ya2ss")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input_Label_Template" parent="VBoxContainer" instance=ExtResource("1_xi0xo")]
layout_mode = 2
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DisplayTypeSelection" parent="VBoxContainer/HBoxContainer" instance=ExtResource("5_icee1")]
layout_mode = 2
label_text = "Select Display Field"
is_label_button = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TableDataSelections" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TableSelection" parent="VBoxContainer/HBoxContainer2/TableDataSelections" instance=ExtResource("5_icee1")]
layout_mode = 2
label_text = "Table"
is_label_button = false

[node name="KeySelection" parent="VBoxContainer/HBoxContainer2/TableDataSelections" instance=ExtResource("5_icee1")]
visible = false
layout_mode = 2
label_text = "Key"
is_label_button = false

[node name="ValueArray" parent="VBoxContainer" instance=ExtResource("5_lpdec")]
visible = false
layout_mode = 2
showDeleteButton = false
showListItemLabel = false
showDatatypeSelection = false
showBeginListLabel = false
showSelectionCheckbox = true
label_text = "Select Items to Include"
is_label_button = false

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Accept" parent="VBoxContainer/HBox2" groups=["Table Action"] instance=ExtResource("6_uf8l7")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="VBoxContainer/HBox2" groups=["Table Action"] instance=ExtResource("6_uf8l7")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[connection signal="input_selection_changed" from="VBoxContainer/HBoxContainer/DisplayTypeSelection" to="." method="_on_displayTypeSelection_changed"]
[connection signal="input_selection_changed" from="VBoxContainer/HBoxContainer2/TableDataSelections/TableSelection" to="." method="_on_table_selection_input_changed"]
[connection signal="input_selection_changed" from="VBoxContainer/HBoxContainer2/TableDataSelections/KeySelection" to="." method="_on_key_selection_input_changed"]
[connection signal="button_up" from="VBoxContainer/HBox2/Cancel" to="." method="_on_cancel_button_up"]

[editable path="VBoxContainer/Input_Label_Template"]
